module_1/part_1/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    CLOSEDIV
    CLOSESPAN
    CLOSESTYLE
    FISH
    GARBAGE
    OPENDIV
    OPENSPAN
    OPENSTYLE
    PEND
    PSTART
    SUPEND
    SUPSTART

Grammar

Rule 0     S' -> start
Rule 1     start -> table
Rule 2     skip -> OPENHEADER content skip
Rule 3     skip -> CLOSEHEADER content skip
Rule 4     skip -> OPENDATA content skip
Rule 5     skip -> temp content skip
Rule 6     skip -> closerow content skip
Rule 7     skip -> OPENROW content skip
Rule 8     skip -> OPENHREF content skip
Rule 9     skip -> CLOSEHREF content skip
Rule 10    skip -> NOBR content skip
Rule 11    skip -> NOBR2 content skip
Rule 12    skip -> WASTE content skip
Rule 13    skip -> content skip
Rule 14    skip -> empty
Rule 15    skipper -> OPENHEADER content skipper
Rule 16    skipper -> CLOSEHEADER content skipper
Rule 17    skipper -> OPENHREF content skipper
Rule 18    skipper -> CLOSEHREF content skipper
Rule 19    skipper -> NOBR content skipper
Rule 20    skipper -> NOBR2 content skipper
Rule 21    skipper -> WASTE content skipper
Rule 22    skipper -> content skipper
Rule 23    skipper -> empty
Rule 24    temp -> CLOSEDATA
Rule 25    closerow -> CLOSEROW
Rule 26    skiptag -> CONTENT skiptag
Rule 27    skiptag -> OPENHEADER skiptag
Rule 28    skiptag -> CLOSEHEADER skiptag
Rule 29    skiptag -> WASTE skiptag
Rule 30    skiptag -> NOBR skiptag
Rule 31    skiptag -> NOBR2 skiptag
Rule 32    skiptag -> OPENHREF skiptag
Rule 33    skiptag -> CLOSEHREF skiptag
Rule 34    skiptag -> empty
Rule 35    row -> OPENROW content data closerow content row
Rule 36    row -> empty
Rule 37    datapro -> OPENDATA CLOSEDATA
Rule 38    datapro -> OPENDATA skipper CLOSEDATA
Rule 39    data -> datapro data
Rule 40    data -> content data
Rule 41    data -> empty
Rule 42    table -> BEGINTABLE CONTENT TABLEHEADER skip TABLECLOSER CONTENT OPENTABLE content row CLOSETABLE
Rule 43    empty -> <empty>
Rule 44    content -> content CONTENT
Rule 45    content -> empty

Terminals, with rules where they appear

BEGINTABLE           : 42
CLOSEDATA            : 24 37 38
CLOSEDIV             : 
CLOSEHEADER          : 3 16 28
CLOSEHREF            : 9 18 33
CLOSEROW             : 25
CLOSESPAN            : 
CLOSESTYLE           : 
CLOSETABLE           : 42
CONTENT              : 26 42 42 44
FISH                 : 
GARBAGE              : 
NOBR                 : 10 19 30
NOBR2                : 11 20 31
OPENDATA             : 4 37 38
OPENDIV              : 
OPENHEADER           : 2 15 27
OPENHREF             : 8 17 32
OPENROW              : 7 35
OPENSPAN             : 
OPENSTYLE            : 
OPENTABLE            : 42
PEND                 : 
PSTART               : 
SUPEND               : 
SUPSTART             : 
TABLECLOSER          : 42
TABLEHEADER          : 42
WASTE                : 12 21 29
error                : 

Nonterminals, with rules where they appear

closerow             : 6 35
content              : 2 3 4 5 6 7 8 9 10 11 12 13 15 16 17 18 19 20 21 22 35 35 40 42 44
data                 : 35 39 40
datapro              : 39
empty                : 14 23 34 36 41 45
row                  : 35 42
skip                 : 2 3 4 5 6 7 8 9 10 11 12 13 42
skipper              : 15 16 17 18 19 20 21 22 38
skiptag              : 26 27 28 29 30 31 32 33
start                : 0
table                : 1
temp                 : 5

Parsing method: LALR

state 0

    (0) S' -> . start
    (1) start -> . table
    (42) table -> . BEGINTABLE CONTENT TABLEHEADER skip TABLECLOSER CONTENT OPENTABLE content row CLOSETABLE

    BEGINTABLE      shift and go to state 3

    start                          shift and go to state 1
    table                          shift and go to state 2

state 1

    (0) S' -> start .



state 2

    (1) start -> table .

    $end            reduce using rule 1 (start -> table .)


state 3

    (42) table -> BEGINTABLE . CONTENT TABLEHEADER skip TABLECLOSER CONTENT OPENTABLE content row CLOSETABLE

    CONTENT         shift and go to state 4


state 4

    (42) table -> BEGINTABLE CONTENT . TABLEHEADER skip TABLECLOSER CONTENT OPENTABLE content row CLOSETABLE

    TABLEHEADER     shift and go to state 5


state 5

    (42) table -> BEGINTABLE CONTENT TABLEHEADER . skip TABLECLOSER CONTENT OPENTABLE content row CLOSETABLE
    (2) skip -> . OPENHEADER content skip
    (3) skip -> . CLOSEHEADER content skip
    (4) skip -> . OPENDATA content skip
    (5) skip -> . temp content skip
    (6) skip -> . closerow content skip
    (7) skip -> . OPENROW content skip
    (8) skip -> . OPENHREF content skip
    (9) skip -> . CLOSEHREF content skip
    (10) skip -> . NOBR content skip
    (11) skip -> . NOBR2 content skip
    (12) skip -> . WASTE content skip
    (13) skip -> . content skip
    (14) skip -> . empty
    (24) temp -> . CLOSEDATA
    (25) closerow -> . CLOSEROW
    (44) content -> . content CONTENT
    (45) content -> . empty
    (43) empty -> .

  ! shift/reduce conflict for OPENHEADER resolved as shift
  ! shift/reduce conflict for CLOSEHEADER resolved as shift
  ! shift/reduce conflict for OPENDATA resolved as shift
  ! shift/reduce conflict for OPENROW resolved as shift
  ! shift/reduce conflict for OPENHREF resolved as shift
  ! shift/reduce conflict for CLOSEHREF resolved as shift
  ! shift/reduce conflict for NOBR resolved as shift
  ! shift/reduce conflict for NOBR2 resolved as shift
  ! shift/reduce conflict for WASTE resolved as shift
  ! shift/reduce conflict for CLOSEDATA resolved as shift
  ! shift/reduce conflict for CLOSEROW resolved as shift
    OPENHEADER      shift and go to state 8
    CLOSEHEADER     shift and go to state 9
    OPENDATA        shift and go to state 10
    OPENROW         shift and go to state 13
    OPENHREF        shift and go to state 14
    CLOSEHREF       shift and go to state 15
    NOBR            shift and go to state 16
    NOBR2           shift and go to state 17
    WASTE           shift and go to state 18
    CLOSEDATA       shift and go to state 20
    CLOSEROW        shift and go to state 21
    TABLECLOSER     reduce using rule 43 (empty -> .)
    CONTENT         reduce using rule 43 (empty -> .)

  ! OPENHEADER      [ reduce using rule 43 (empty -> .) ]
  ! CLOSEHEADER     [ reduce using rule 43 (empty -> .) ]
  ! OPENDATA        [ reduce using rule 43 (empty -> .) ]
  ! OPENROW         [ reduce using rule 43 (empty -> .) ]
  ! OPENHREF        [ reduce using rule 43 (empty -> .) ]
  ! CLOSEHREF       [ reduce using rule 43 (empty -> .) ]
  ! NOBR            [ reduce using rule 43 (empty -> .) ]
  ! NOBR2           [ reduce using rule 43 (empty -> .) ]
  ! WASTE           [ reduce using rule 43 (empty -> .) ]
  ! CLOSEDATA       [ reduce using rule 43 (empty -> .) ]
  ! CLOSEROW        [ reduce using rule 43 (empty -> .) ]

    skip                           shift and go to state 6
    content                        shift and go to state 7
    temp                           shift and go to state 11
    closerow                       shift and go to state 12
    empty                          shift and go to state 19

state 6

    (42) table -> BEGINTABLE CONTENT TABLEHEADER skip . TABLECLOSER CONTENT OPENTABLE content row CLOSETABLE

    TABLECLOSER     shift and go to state 22


state 7

    (13) skip -> content . skip
    (44) content -> content . CONTENT
    (2) skip -> . OPENHEADER content skip
    (3) skip -> . CLOSEHEADER content skip
    (4) skip -> . OPENDATA content skip
    (5) skip -> . temp content skip
    (6) skip -> . closerow content skip
    (7) skip -> . OPENROW content skip
    (8) skip -> . OPENHREF content skip
    (9) skip -> . CLOSEHREF content skip
    (10) skip -> . NOBR content skip
    (11) skip -> . NOBR2 content skip
    (12) skip -> . WASTE content skip
    (13) skip -> . content skip
    (14) skip -> . empty
    (24) temp -> . CLOSEDATA
    (25) closerow -> . CLOSEROW
    (44) content -> . content CONTENT
    (45) content -> . empty
    (43) empty -> .

  ! shift/reduce conflict for CONTENT resolved as shift
  ! shift/reduce conflict for OPENHEADER resolved as shift
  ! shift/reduce conflict for CLOSEHEADER resolved as shift
  ! shift/reduce conflict for OPENDATA resolved as shift
  ! shift/reduce conflict for OPENROW resolved as shift
  ! shift/reduce conflict for OPENHREF resolved as shift
  ! shift/reduce conflict for CLOSEHREF resolved as shift
  ! shift/reduce conflict for NOBR resolved as shift
  ! shift/reduce conflict for NOBR2 resolved as shift
  ! shift/reduce conflict for WASTE resolved as shift
  ! shift/reduce conflict for CLOSEDATA resolved as shift
  ! shift/reduce conflict for CLOSEROW resolved as shift
    CONTENT         shift and go to state 24
    OPENHEADER      shift and go to state 8
    CLOSEHEADER     shift and go to state 9
    OPENDATA        shift and go to state 10
    OPENROW         shift and go to state 13
    OPENHREF        shift and go to state 14
    CLOSEHREF       shift and go to state 15
    NOBR            shift and go to state 16
    NOBR2           shift and go to state 17
    WASTE           shift and go to state 18
    CLOSEDATA       shift and go to state 20
    CLOSEROW        shift and go to state 21
    TABLECLOSER     reduce using rule 43 (empty -> .)

  ! CONTENT         [ reduce using rule 43 (empty -> .) ]
  ! OPENHEADER      [ reduce using rule 43 (empty -> .) ]
  ! CLOSEHEADER     [ reduce using rule 43 (empty -> .) ]
  ! OPENDATA        [ reduce using rule 43 (empty -> .) ]
  ! OPENROW         [ reduce using rule 43 (empty -> .) ]
  ! OPENHREF        [ reduce using rule 43 (empty -> .) ]
  ! CLOSEHREF       [ reduce using rule 43 (empty -> .) ]
  ! NOBR            [ reduce using rule 43 (empty -> .) ]
  ! NOBR2           [ reduce using rule 43 (empty -> .) ]
  ! WASTE           [ reduce using rule 43 (empty -> .) ]
  ! CLOSEDATA       [ reduce using rule 43 (empty -> .) ]
  ! CLOSEROW        [ reduce using rule 43 (empty -> .) ]

    content                        shift and go to state 7
    skip                           shift and go to state 23
    temp                           shift and go to state 11
    closerow                       shift and go to state 12
    empty                          shift and go to state 19

state 8

    (2) skip -> OPENHEADER . content skip
    (44) content -> . content CONTENT
    (45) content -> . empty
    (43) empty -> .

    CONTENT         reduce using rule 43 (empty -> .)
    OPENHEADER      reduce using rule 43 (empty -> .)
    CLOSEHEADER     reduce using rule 43 (empty -> .)
    OPENDATA        reduce using rule 43 (empty -> .)
    OPENROW         reduce using rule 43 (empty -> .)
    OPENHREF        reduce using rule 43 (empty -> .)
    CLOSEHREF       reduce using rule 43 (empty -> .)
    NOBR            reduce using rule 43 (empty -> .)
    NOBR2           reduce using rule 43 (empty -> .)
    WASTE           reduce using rule 43 (empty -> .)
    CLOSEDATA       reduce using rule 43 (empty -> .)
    CLOSEROW        reduce using rule 43 (empty -> .)
    TABLECLOSER     reduce using rule 43 (empty -> .)

    content                        shift and go to state 25
    empty                          shift and go to state 26

state 9

    (3) skip -> CLOSEHEADER . content skip
    (44) content -> . content CONTENT
    (45) content -> . empty
    (43) empty -> .

    CONTENT         reduce using rule 43 (empty -> .)
    OPENHEADER      reduce using rule 43 (empty -> .)
    CLOSEHEADER     reduce using rule 43 (empty -> .)
    OPENDATA        reduce using rule 43 (empty -> .)
    OPENROW         reduce using rule 43 (empty -> .)
    OPENHREF        reduce using rule 43 (empty -> .)
    CLOSEHREF       reduce using rule 43 (empty -> .)
    NOBR            reduce using rule 43 (empty -> .)
    NOBR2           reduce using rule 43 (empty -> .)
    WASTE           reduce using rule 43 (empty -> .)
    CLOSEDATA       reduce using rule 43 (empty -> .)
    CLOSEROW        reduce using rule 43 (empty -> .)
    TABLECLOSER     reduce using rule 43 (empty -> .)

    content                        shift and go to state 27
    empty                          shift and go to state 26

state 10

    (4) skip -> OPENDATA . content skip
    (44) content -> . content CONTENT
    (45) content -> . empty
    (43) empty -> .

    CONTENT         reduce using rule 43 (empty -> .)
    OPENHEADER      reduce using rule 43 (empty -> .)
    CLOSEHEADER     reduce using rule 43 (empty -> .)
    OPENDATA        reduce using rule 43 (empty -> .)
    OPENROW         reduce using rule 43 (empty -> .)
    OPENHREF        reduce using rule 43 (empty -> .)
    CLOSEHREF       reduce using rule 43 (empty -> .)
    NOBR            reduce using rule 43 (empty -> .)
    NOBR2           reduce using rule 43 (empty -> .)
    WASTE           reduce using rule 43 (empty -> .)
    CLOSEDATA       reduce using rule 43 (empty -> .)
    CLOSEROW        reduce using rule 43 (empty -> .)
    TABLECLOSER     reduce using rule 43 (empty -> .)

    content                        shift and go to state 28
    empty                          shift and go to state 26

state 11

    (5) skip -> temp . content skip
    (44) content -> . content CONTENT
    (45) content -> . empty
    (43) empty -> .

    CONTENT         reduce using rule 43 (empty -> .)
    OPENHEADER      reduce using rule 43 (empty -> .)
    CLOSEHEADER     reduce using rule 43 (empty -> .)
    OPENDATA        reduce using rule 43 (empty -> .)
    OPENROW         reduce using rule 43 (empty -> .)
    OPENHREF        reduce using rule 43 (empty -> .)
    CLOSEHREF       reduce using rule 43 (empty -> .)
    NOBR            reduce using rule 43 (empty -> .)
    NOBR2           reduce using rule 43 (empty -> .)
    WASTE           reduce using rule 43 (empty -> .)
    CLOSEDATA       reduce using rule 43 (empty -> .)
    CLOSEROW        reduce using rule 43 (empty -> .)
    TABLECLOSER     reduce using rule 43 (empty -> .)

    content                        shift and go to state 29
    empty                          shift and go to state 26

state 12

    (6) skip -> closerow . content skip
    (44) content -> . content CONTENT
    (45) content -> . empty
    (43) empty -> .

    CONTENT         reduce using rule 43 (empty -> .)
    OPENHEADER      reduce using rule 43 (empty -> .)
    CLOSEHEADER     reduce using rule 43 (empty -> .)
    OPENDATA        reduce using rule 43 (empty -> .)
    OPENROW         reduce using rule 43 (empty -> .)
    OPENHREF        reduce using rule 43 (empty -> .)
    CLOSEHREF       reduce using rule 43 (empty -> .)
    NOBR            reduce using rule 43 (empty -> .)
    NOBR2           reduce using rule 43 (empty -> .)
    WASTE           reduce using rule 43 (empty -> .)
    CLOSEDATA       reduce using rule 43 (empty -> .)
    CLOSEROW        reduce using rule 43 (empty -> .)
    TABLECLOSER     reduce using rule 43 (empty -> .)

    content                        shift and go to state 30
    empty                          shift and go to state 26

state 13

    (7) skip -> OPENROW . content skip
    (44) content -> . content CONTENT
    (45) content -> . empty
    (43) empty -> .

    CONTENT         reduce using rule 43 (empty -> .)
    OPENHEADER      reduce using rule 43 (empty -> .)
    CLOSEHEADER     reduce using rule 43 (empty -> .)
    OPENDATA        reduce using rule 43 (empty -> .)
    OPENROW         reduce using rule 43 (empty -> .)
    OPENHREF        reduce using rule 43 (empty -> .)
    CLOSEHREF       reduce using rule 43 (empty -> .)
    NOBR            reduce using rule 43 (empty -> .)
    NOBR2           reduce using rule 43 (empty -> .)
    WASTE           reduce using rule 43 (empty -> .)
    CLOSEDATA       reduce using rule 43 (empty -> .)
    CLOSEROW        reduce using rule 43 (empty -> .)
    TABLECLOSER     reduce using rule 43 (empty -> .)

    content                        shift and go to state 31
    empty                          shift and go to state 26

state 14

    (8) skip -> OPENHREF . content skip
    (44) content -> . content CONTENT
    (45) content -> . empty
    (43) empty -> .

    CONTENT         reduce using rule 43 (empty -> .)
    OPENHEADER      reduce using rule 43 (empty -> .)
    CLOSEHEADER     reduce using rule 43 (empty -> .)
    OPENDATA        reduce using rule 43 (empty -> .)
    OPENROW         reduce using rule 43 (empty -> .)
    OPENHREF        reduce using rule 43 (empty -> .)
    CLOSEHREF       reduce using rule 43 (empty -> .)
    NOBR            reduce using rule 43 (empty -> .)
    NOBR2           reduce using rule 43 (empty -> .)
    WASTE           reduce using rule 43 (empty -> .)
    CLOSEDATA       reduce using rule 43 (empty -> .)
    CLOSEROW        reduce using rule 43 (empty -> .)
    TABLECLOSER     reduce using rule 43 (empty -> .)

    content                        shift and go to state 32
    empty                          shift and go to state 26

state 15

    (9) skip -> CLOSEHREF . content skip
    (44) content -> . content CONTENT
    (45) content -> . empty
    (43) empty -> .

    CONTENT         reduce using rule 43 (empty -> .)
    OPENHEADER      reduce using rule 43 (empty -> .)
    CLOSEHEADER     reduce using rule 43 (empty -> .)
    OPENDATA        reduce using rule 43 (empty -> .)
    OPENROW         reduce using rule 43 (empty -> .)
    OPENHREF        reduce using rule 43 (empty -> .)
    CLOSEHREF       reduce using rule 43 (empty -> .)
    NOBR            reduce using rule 43 (empty -> .)
    NOBR2           reduce using rule 43 (empty -> .)
    WASTE           reduce using rule 43 (empty -> .)
    CLOSEDATA       reduce using rule 43 (empty -> .)
    CLOSEROW        reduce using rule 43 (empty -> .)
    TABLECLOSER     reduce using rule 43 (empty -> .)

    content                        shift and go to state 33
    empty                          shift and go to state 26

state 16

    (10) skip -> NOBR . content skip
    (44) content -> . content CONTENT
    (45) content -> . empty
    (43) empty -> .

    CONTENT         reduce using rule 43 (empty -> .)
    OPENHEADER      reduce using rule 43 (empty -> .)
    CLOSEHEADER     reduce using rule 43 (empty -> .)
    OPENDATA        reduce using rule 43 (empty -> .)
    OPENROW         reduce using rule 43 (empty -> .)
    OPENHREF        reduce using rule 43 (empty -> .)
    CLOSEHREF       reduce using rule 43 (empty -> .)
    NOBR            reduce using rule 43 (empty -> .)
    NOBR2           reduce using rule 43 (empty -> .)
    WASTE           reduce using rule 43 (empty -> .)
    CLOSEDATA       reduce using rule 43 (empty -> .)
    CLOSEROW        reduce using rule 43 (empty -> .)
    TABLECLOSER     reduce using rule 43 (empty -> .)

    content                        shift and go to state 34
    empty                          shift and go to state 26

state 17

    (11) skip -> NOBR2 . content skip
    (44) content -> . content CONTENT
    (45) content -> . empty
    (43) empty -> .

    CONTENT         reduce using rule 43 (empty -> .)
    OPENHEADER      reduce using rule 43 (empty -> .)
    CLOSEHEADER     reduce using rule 43 (empty -> .)
    OPENDATA        reduce using rule 43 (empty -> .)
    OPENROW         reduce using rule 43 (empty -> .)
    OPENHREF        reduce using rule 43 (empty -> .)
    CLOSEHREF       reduce using rule 43 (empty -> .)
    NOBR            reduce using rule 43 (empty -> .)
    NOBR2           reduce using rule 43 (empty -> .)
    WASTE           reduce using rule 43 (empty -> .)
    CLOSEDATA       reduce using rule 43 (empty -> .)
    CLOSEROW        reduce using rule 43 (empty -> .)
    TABLECLOSER     reduce using rule 43 (empty -> .)

    content                        shift and go to state 35
    empty                          shift and go to state 26

state 18

    (12) skip -> WASTE . content skip
    (44) content -> . content CONTENT
    (45) content -> . empty
    (43) empty -> .

    CONTENT         reduce using rule 43 (empty -> .)
    OPENHEADER      reduce using rule 43 (empty -> .)
    CLOSEHEADER     reduce using rule 43 (empty -> .)
    OPENDATA        reduce using rule 43 (empty -> .)
    OPENROW         reduce using rule 43 (empty -> .)
    OPENHREF        reduce using rule 43 (empty -> .)
    CLOSEHREF       reduce using rule 43 (empty -> .)
    NOBR            reduce using rule 43 (empty -> .)
    NOBR2           reduce using rule 43 (empty -> .)
    WASTE           reduce using rule 43 (empty -> .)
    CLOSEDATA       reduce using rule 43 (empty -> .)
    CLOSEROW        reduce using rule 43 (empty -> .)
    TABLECLOSER     reduce using rule 43 (empty -> .)

    content                        shift and go to state 36
    empty                          shift and go to state 26

state 19

    (14) skip -> empty .
    (45) content -> empty .

  ! reduce/reduce conflict for TABLECLOSER resolved using rule 14 (skip -> empty .)
    TABLECLOSER     reduce using rule 14 (skip -> empty .)
    CONTENT         reduce using rule 45 (content -> empty .)
    OPENHEADER      reduce using rule 45 (content -> empty .)
    CLOSEHEADER     reduce using rule 45 (content -> empty .)
    OPENDATA        reduce using rule 45 (content -> empty .)
    OPENROW         reduce using rule 45 (content -> empty .)
    OPENHREF        reduce using rule 45 (content -> empty .)
    CLOSEHREF       reduce using rule 45 (content -> empty .)
    NOBR            reduce using rule 45 (content -> empty .)
    NOBR2           reduce using rule 45 (content -> empty .)
    WASTE           reduce using rule 45 (content -> empty .)
    CLOSEDATA       reduce using rule 45 (content -> empty .)
    CLOSEROW        reduce using rule 45 (content -> empty .)

  ! TABLECLOSER     [ reduce using rule 45 (content -> empty .) ]


state 20

    (24) temp -> CLOSEDATA .

    CONTENT         reduce using rule 24 (temp -> CLOSEDATA .)
    OPENHEADER      reduce using rule 24 (temp -> CLOSEDATA .)
    CLOSEHEADER     reduce using rule 24 (temp -> CLOSEDATA .)
    OPENDATA        reduce using rule 24 (temp -> CLOSEDATA .)
    OPENROW         reduce using rule 24 (temp -> CLOSEDATA .)
    OPENHREF        reduce using rule 24 (temp -> CLOSEDATA .)
    CLOSEHREF       reduce using rule 24 (temp -> CLOSEDATA .)
    NOBR            reduce using rule 24 (temp -> CLOSEDATA .)
    NOBR2           reduce using rule 24 (temp -> CLOSEDATA .)
    WASTE           reduce using rule 24 (temp -> CLOSEDATA .)
    CLOSEDATA       reduce using rule 24 (temp -> CLOSEDATA .)
    CLOSEROW        reduce using rule 24 (temp -> CLOSEDATA .)
    TABLECLOSER     reduce using rule 24 (temp -> CLOSEDATA .)


state 21

    (25) closerow -> CLOSEROW .

    CONTENT         reduce using rule 25 (closerow -> CLOSEROW .)
    OPENHEADER      reduce using rule 25 (closerow -> CLOSEROW .)
    CLOSEHEADER     reduce using rule 25 (closerow -> CLOSEROW .)
    OPENDATA        reduce using rule 25 (closerow -> CLOSEROW .)
    OPENROW         reduce using rule 25 (closerow -> CLOSEROW .)
    OPENHREF        reduce using rule 25 (closerow -> CLOSEROW .)
    CLOSEHREF       reduce using rule 25 (closerow -> CLOSEROW .)
    NOBR            reduce using rule 25 (closerow -> CLOSEROW .)
    NOBR2           reduce using rule 25 (closerow -> CLOSEROW .)
    WASTE           reduce using rule 25 (closerow -> CLOSEROW .)
    CLOSEDATA       reduce using rule 25 (closerow -> CLOSEROW .)
    CLOSEROW        reduce using rule 25 (closerow -> CLOSEROW .)
    TABLECLOSER     reduce using rule 25 (closerow -> CLOSEROW .)
    CLOSETABLE      reduce using rule 25 (closerow -> CLOSEROW .)


state 22

    (42) table -> BEGINTABLE CONTENT TABLEHEADER skip TABLECLOSER . CONTENT OPENTABLE content row CLOSETABLE

    CONTENT         shift and go to state 37


state 23

    (13) skip -> content skip .

    TABLECLOSER     reduce using rule 13 (skip -> content skip .)


state 24

    (44) content -> content CONTENT .

    CONTENT         reduce using rule 44 (content -> content CONTENT .)
    OPENHEADER      reduce using rule 44 (content -> content CONTENT .)
    CLOSEHEADER     reduce using rule 44 (content -> content CONTENT .)
    OPENDATA        reduce using rule 44 (content -> content CONTENT .)
    OPENROW         reduce using rule 44 (content -> content CONTENT .)
    OPENHREF        reduce using rule 44 (content -> content CONTENT .)
    CLOSEHREF       reduce using rule 44 (content -> content CONTENT .)
    NOBR            reduce using rule 44 (content -> content CONTENT .)
    NOBR2           reduce using rule 44 (content -> content CONTENT .)
    WASTE           reduce using rule 44 (content -> content CONTENT .)
    CLOSEDATA       reduce using rule 44 (content -> content CONTENT .)
    CLOSEROW        reduce using rule 44 (content -> content CONTENT .)
    TABLECLOSER     reduce using rule 44 (content -> content CONTENT .)
    CLOSETABLE      reduce using rule 44 (content -> content CONTENT .)


state 25

    (2) skip -> OPENHEADER content . skip
    (44) content -> content . CONTENT
    (2) skip -> . OPENHEADER content skip
    (3) skip -> . CLOSEHEADER content skip
    (4) skip -> . OPENDATA content skip
    (5) skip -> . temp content skip
    (6) skip -> . closerow content skip
    (7) skip -> . OPENROW content skip
    (8) skip -> . OPENHREF content skip
    (9) skip -> . CLOSEHREF content skip
    (10) skip -> . NOBR content skip
    (11) skip -> . NOBR2 content skip
    (12) skip -> . WASTE content skip
    (13) skip -> . content skip
    (14) skip -> . empty
    (24) temp -> . CLOSEDATA
    (25) closerow -> . CLOSEROW
    (44) content -> . content CONTENT
    (45) content -> . empty
    (43) empty -> .

  ! shift/reduce conflict for CONTENT resolved as shift
  ! shift/reduce conflict for OPENHEADER resolved as shift
  ! shift/reduce conflict for CLOSEHEADER resolved as shift
  ! shift/reduce conflict for OPENDATA resolved as shift
  ! shift/reduce conflict for OPENROW resolved as shift
  ! shift/reduce conflict for OPENHREF resolved as shift
  ! shift/reduce conflict for CLOSEHREF resolved as shift
  ! shift/reduce conflict for NOBR resolved as shift
